--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,13 @@
 services:
   - type: web
-    name: diagram-rag-server
+    name: diagram-rag-chatbot
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: GEMINI_API_KEY
+        sync: false
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_KEY
         sync: false
